--- a/.github/workflows/weeklies.yaml
+++ b/.github/workflows/weeklies.yaml
@@ -55,8 +55,7 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      
-      - name: create docker image
+      # - name: create docker image
         run: |
           docker pull gcr.io/gem5-test/gcn-gpu:latest
           docker build -t hacc-test-weekly gem5-resources/src/gpu/halo-finder  
