--- a/.github/workflows/weeklies.yaml
+++ b/.github/workflows/weeklies.yaml
@@ -59,14 +59,15 @@ jobs:
           # docker build -t hacc-test-weekly gem5-resources/src/gpu/halo-finder  
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        # uses: docker/setup-buildx-action@v2
+        uses: docker/build-push-action@v2
         with:
-          context: .
-          file: gem5-resources/src/gpu/halo-finder 
+          context: ./gem5-resources/src/gpu/halo-finder 
+          # file: gem5-resources/src/gpu/halo-finder 
           tags: hacc-test-weekly
           # build-args: |
           #     "NPM_TOKEN=${{ secrets.TOKEN }}"
-          # push: true
+          push: true
 
       
       - name: start running tests
