--- a/.github/workflows/weeklies.yaml
+++ b/.github/workflows/weeklies.yaml
@@ -56,7 +56,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       
-      - name: create docker image
+      - name: create docker imaged
         run: |
           docker pull gcr.io/gem5-test/gcn-gpu:latest
           # docker build -t hacc-test-weekly gem5-resources/src/gpu/halo-finder  
